# stock-screener

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  screener.py  screening.py  stocks.py
backend/app/core/: security.py
backend/app/core/screening/: __init__.py  registry.py  scorer.py
backend/app/core/screening/criteria/: __init__.py  base.py
backend/app/core/screening/criteria/financial_health/: __init__.py  current_ratio.py  debt_to_equity.py  interest_coverage.py  quick_ratio.py
backend/app/core/screening/criteria/growth/: __init__.py  eps_growth.py  revenue_growth.py
backend/app/core/screening/criteria/profitability/: __init__.py  gross_margin.py  net_margin.py  operating_margin.py  roa.py  roe.py
backend/app/core/screening/criteria/valuation/: __init__.py  ev_ebitda.py  pb_ratio.py  pe_ratio.py  peg_ratio.py  price_to_fcf.py  ps_ratio.py
backend/app/data/providers/: base.py  yahoo_finance.py
backend/app/models/: __init__.py  base.py  financial.py  screening_result.py  stock.py  user.py
backend/app/schemas/: __init__.py  auth.py  screening.py  stock.py  user.py
backend/app/tasks/: celery_app.py  data_fetch.py  schedules.py  screening_run.py
backend/tests/: conftest.py
backend/tests/test_api/: test_screener.py
backend/tests/test_screening/: test_criteria.py  test_engine.py
design/: README.md
design/api/: api-spec.md
design/architecture/: backend-design.md  data-pipeline.md  frontend-design.md  system-overview.md
design/database/: schema.md
design/infrastructure/: infra.md
design/screening/: screening-engine.md
frontend/: package.json
frontend/apps/web/: Dockerfile  next.config.ts  package.json  (+2 more)
nginx/: nginx.conf
(+11 files in other folders)
